# blender

./: .gitignore  CMakeCache.txt  readme.rst
.github/workflows/: c-cpp.yml
build_files/cmake/: macros.cmake
release/datafiles/userdef/: userdef_default.c
release/scripts/startup/: nodeitems_builtins.py
release/scripts/startup/bl_ui/: space_node.py  space_userpref.py
source/blender/: CMakeLists.txt
source/blender/blenkernel/: BKE_lib_id.h  BKE_node.h  BKE_node_camera_view.h  BKE_node_offscreen.h  CMakeLists.txt
source/blender/blenkernel/intern/: node.c  sequencer.c
source/blender/blenlib/intern/: winstuff.c
source/blender/blenloader/intern/: versioning_260.c
source/blender/compositor/: CMakeLists.txt  COM_compositor.h  COM_defines.h
source/blender/compositor/buffering/: COM_Buffer.h  COM_BufferManager.cpp  COM_BufferManager.h  COM_BufferRecycler.cpp  COM_BufferRecycler.h  COM_Pixels.cpp  COM_Pixels.h  COM_ReadsOptimizer.cpp  COM_ReadsOptimizer.h  COM_Rect.cpp  COM_Rect.h  COM_ViewCacheManager.cpp  COM_ViewCacheManager.h
source/blender/compositor/build_compositor/: CMakeLists.txt
source/blender/compositor/build_defmerger/: CMakeLists.txt  COM_CyclesWrapper.cpp  COM_CyclesWrapper.h  COM_DefMerger.cpp  COM_DefMerger.h  COM_IncludesResolver.cpp  COM_IncludesResolver.h
source/blender/compositor/caching/: COM_BaseCache.cpp  COM_BaseCache.h  COM_CacheManager.cpp  COM_CacheManager.h  COM_DiskCache.cpp  COM_DiskCache.h  COM_MemoryCache.cpp  COM_MemoryCache.h  COM_ViewCacheManager.cpp  COM_ViewCacheManager.h
source/blender/compositor/computing/: COM_ComputeDevice.cpp  COM_ComputeDevice.h  COM_ComputeKernel.cpp  COM_ComputeKernel.h  COM_ComputeManager.cpp  COM_ComputeManager.h  COM_ComputeNoneManager.h  COM_ComputePlatform.cpp  COM_ComputePlatform.h  COM_OpenCLKernels.cl  COM_OpenCLKernels.cl.h  COM_kernel_cpu.h  COM_kernel_cpu_nocompat.h  COM_kernel_opencl.h
source/blender/compositor/intern/: COM_Buffer.h  COM_BufferManager.cc  COM_BufferManager.h  COM_CPUDevice.cc  COM_CPUDevice.cpp  COM_CPUDevice.h  COM_CompositorContext.cc  COM_CompositorContext.cpp  COM_CompositorContext.h  COM_Converter.cc  COM_Converter.cpp  COM_Converter.h  COM_Debug.cc  COM_Debug.cpp  COM_Debug.h  COM_ExecutionGroup.cc  COM_ExecutionGroup.cpp  COM_ExecutionGroup.h  COM_ExecutionManager.cpp  COM_ExecutionManager.h  COM_ExecutionSystem.cc  COM_ExecutionSystem.cpp  COM_ExecutionSystem.h  COM_GlobalManager.cpp  COM_GlobalManager.h  COM_Keys.h  COM_Node.cpp  COM_Node.h  COM_NodeConverter.cpp  COM_NodeConverter.h  COM_NodeGraph.cc  COM_NodeGraph.cpp  COM_NodeGraph.h  COM_NodeOperation.cc  COM_NodeOperation.cpp  COM_NodeOperation.h  COM_NodeOperationBuilder.cc  COM_NodeOperationBuilder.cpp  COM_NodeOperationBuilder.h  COM_NodeSocketReader.cpp  (+15 more)
source/blender/compositor/nodes/: COM_ImageNode.cc  COM_SocketProxyNode.cc  COM_SocketProxyNode.cpp  COM_SocketProxyNode.h
source/blender/compositor/operations/: COM_AntiAliasOperation.cpp  COM_AntiAliasOperation.h  COM_BilateralBlurOperation.cpp  COM_BilateralBlurOperation.h  COM_BlurBaseOperation.cpp  COM_BlurBaseOperation.h  COM_BokehBlurOperation.cpp  COM_BokehBlurOperation.h  COM_BoxMaskOperation.cpp  COM_BoxMaskOperation.h  COM_ChannelMatteOperation.cpp  COM_ChannelMatteOperation.h  COM_ChromaMatteOperation.cpp  COM_ChromaMatteOperation.h  COM_ColorMatteOperation.cpp  COM_ColorMatteOperation.h  COM_ColorSpillOperation.cpp  COM_ColorSpillOperation.h  COM_ConvertOperation.cc  COM_ConvertOperation.h  COM_CurveBaseOperation.cpp  COM_CurveBaseOperation.h  COM_DirectionalBlurOperation.cc  COM_DirectionalBlurOperation.h  COM_FastGaussianBlurOperation.cpp  COM_GammaOperation.cc  COM_GammaOperation.h  COM_GaussianAlphaXBlurOperation.cpp  COM_GlareGhostOperation.cpp  COM_GlareStreaksOperation.cpp  COM_ImageOperation.cc  COM_ImageOperation.h  COM_OpenCLKernels.cl  COM_QualityStepHelper.cpp  (+18 more)
source/blender/defmerger/: CMakeLists.txt  defmerger.cpp
source/blender/makesdna/: DNA_node_types.h  DNA_space_types.h  DNA_userdef_types.h
source/blender/nodes/: CMakeLists.txt  NOD_composite.h  NOD_static_types.h
source/blender/sequencer/: BKE_sequencer.h
(+511 files in other folders)
